add console and change settings